# liuPNP

./: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4
components/cJSON/: CMakeLists.txt
components/esp_camera/: CMakeLists.txt
components/esp_camera/conversions/include/: jpeg_decoder.h
components/esp_camera/driver/: esp_camera_stub.c
docs/: MCP-INTEGRATION.md  liuPNP-analysis.md  liuPNP-framework.md
main/: CMakeLists.txt  Kconfig.projbuild  base64.c  base64.h  calib.c  calib.h  camera.c  camera.h  doubao.c  doubao.h  http_client.c  http_client.h  idf_component.yml  main.c  main.h  motion.c  motion.h  placements.c  placements.h  state_machine.c  state_machine.h  vision.c  vision.h  web_server.c  web_server.h
src/: main.c  s3_main.c
